fix: disable autofocus on tablet, SendFiles btn is not active until the files are uploaded, fix placeholder ellipsis color

--- a/src/dotnet/Chat.UI.Blazor/Components/MarkupEditor/markup-editor.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/MarkupEditor/markup-editor.css
@@ -29,6 +29,9 @@
 }
 
 /* Placeholder */
+.markup-editor .editor-content:empty {
+    @apply text-04;
+}
 .markup-editor .editor-content:empty:before {
     content: attr(data-placeholder);
     @apply truncate;
